--- a/tests/end2end/data/fileselect.html
+++ b/tests/end2end/data/fileselect.html
@@ -5,7 +5,7 @@
         <title>Testing fileselection</title>
         <script type="text/javascript">
             function onLoad() {
-                for (let id of ['#single_file', '#multiple_files']) {
+                for (let id of ['#single_file', '#multiple_files', '#folder']) {
                     const input = document.querySelector(id);
                     input.addEventListener('change', function (e) {
                         console.log(`Files: ${Array.from(input.files).map(f => f.name).join(", ")}`);
@@ -17,5 +17,6 @@
     <body onload="onLoad()">
         <input type="file" id="single_file" name="single_file" accept=".txt">
         <input type="file" id="multiple_files" name="multiple_files" accept=".txt" multiple>
+        <input type="file" id="folder" name="folder" webkitdirectory>
     </body>
 </html>
