--- a/tests/end2end/data/fileselect.html
+++ b/tests/end2end/data/fileselect.html
@@ -15,8 +15,17 @@
         </script>
     </head>
     <body onload="onLoad()">
-        <input type="file" id="single_file" name="single_file" accept=".txt">
-        <input type="file" id="multiple_files" name="multiple_files" accept=".txt" multiple>
-        <input type="file" id="folder" name="folder" webkitdirectory>
+        <div>
+            <label for="single_file">Select single file</label>
+            <input type="file" id="single_file" name="single_file" accept=".txt">
+        </div>
+        <div>
+            <label for="multiple_files">Select multiple files</label>
+            <input type="file" id="multiple_files" value="Select multiple files" name="multiple_files" accept=".txt" multiple>
+        </div>
+        <div>
+            <label for="folder">Select single folder</label>
+            <input type="file" id="folder" value="Select single folder" name="folder" webkitdirectory>
+        </div>
     </body>
 </html>
