notifications: Move test files

--- a/tests/end2end/data/javascript/notifications.html
+++ b/tests/end2end/data/javascript/notifications.html
@@ -56,12 +56,12 @@
 
             function show_image_notification() {
                 // For manual testing
-                let notification = new Notification("qutebrowser logo", { icon: '/data/downloads/qutebrowser.png' });
+                let notification = new Notification("qutebrowser logo", { icon: '/data/img/qutebrowser.png' });
             }
 
             function show_image_notification_noalpha() {
                 // For manual testing
-                let notification = new Notification("qutebrowser logo", { icon: '/data/downloads/qutebrowser-noalpha.png' });
+                let notification = new Notification("qutebrowser logo", { icon: '/data/img/qutebrowser-noalpha.png' });
             }
         </script>
     </head>
