notifications: Add some structure to test HTML

--- a/tests/end2end/data/javascript/notifications.html
+++ b/tests/end2end/data/javascript/notifications.html
@@ -66,11 +66,17 @@
         </script>
     </head>
     <body>
+        <div>
         <input type="button" onclick="get_notification_permission()" value="Get notification permission" id="button">
+        </div>
+        <div>
         <input type="button" onclick="show_notification()" value="Show notification" id="show-button">
         <input type="button" onclick="show_symbol_notification()" value="Show notification with symbols" id="show-symbols-button">
         <input type="button" onclick="show_multiple_notifications()" value="Show multiple notifications" id="show-multiple-button">
+        </div>
+        <div>
         <input type="button" onclick="show_image_notification()" value="Show image notification" id="show-image-button">
         <input type="button" onclick="show_image_notification_noalpha()" value="Show image notification without alpha channel" id="show-image-button-noalpha">
+        </div>
     </body>
 </html>
