notifications: Fetch capabilities early and avoid restart

--- a/tests/end2end/data/javascript/notifications.html
+++ b/tests/end2end/data/javascript/notifications.html
@@ -9,10 +9,10 @@
                         console.log("notification permission granted");
                         break;
                     case "denied":
-                        console.log("notification permission denied");
+                        console.log("[FAIL] notification permission denied");
                         break;
                     case "default":
-                        console.log("notification permission aborted");
+                        console.log("[FAIL] notification permission aborted");
                         break;
                     default:
                         console.log("[FAIL] unknown value for permission: " + Notification.permission);
@@ -21,25 +21,16 @@
             }
 
             function get_notification_permission() {
-                if ("Notification" in window) {
-                    if (Notification.permission === "default") {
-                        Notification.requestPermission(permission_cb);
-                    } else {
-                        console.log("[FAIL] unknown initial value for Notification.permission: " + Notification.permission);
-                    }
-                } else {
+                if (!("Notification" in window)) {
                     console.log("[FAIL] notifications unavailable");
                 }
-            }
-
-            function ensure_permission() {
-                if (Notification.permission !== "granted") {
-                    alert("No notification permission granted!");
+                if (Notification.permission === "default") {
+                    Notification.requestPermission(permission_cb);
                 }
             }
 
             function show_notification() {
-                ensure_permission();
+                get_notification_permission();
                 let notification = new Notification("notification title", {
                     body: "notification body"
                 });
@@ -49,14 +40,14 @@
             }
 
             function show_symbol_notification() {
-                ensure_permission();
+                get_notification_permission();
                 let str = "<< && >>";
                 let notification = new Notification(str, { body: str });
                 notification.onshow = function() { console.log("notification shown"); };
             }
 
             function show_multiple_notifications() {
-                ensure_permission();
+                get_notification_permission();
                 for (let i = 1; i <= 3; i++) {
                     let notification = new Notification(`i=${i}`, { tag: 'counter' });
                     notification.onshow = function() { console.log(`i=${i} notification shown`); };
@@ -64,13 +55,13 @@
             }
 
             function show_image_notification() {
-                ensure_permission();
+                get_notification_permission();
                 // For manual testing
                 let notification = new Notification("qutebrowser logo", { icon: '/data/img/qutebrowser.png' });
             }
 
             function show_image_notification_noalpha() {
-                ensure_permission();
+                get_notification_permission();
                 // For manual testing
                 let notification = new Notification("qutebrowser logo", { icon: '/data/img/qutebrowser-noalpha.png' });
             }
