notifications: Adjust tests for new image handling
Also check image validity in tests

--- a/tests/end2end/data/javascript/notifications.html
+++ b/tests/end2end/data/javascript/notifications.html
@@ -66,15 +66,15 @@
 
             function show_image_notification() {
                 get_notification_permission(() => {
-                    // For manual testing
                     let notification = new Notification("RGBA", { icon: 'img/rgba.png' });
+                    notification.onshow = function() { console.log("notification shown"); };
                 });
             }
 
             function show_image_notification_noalpha() {
                 get_notification_permission(() => {
-                    // For manual testing
                     let notification = new Notification("RGB", { icon: 'img/rgb.png' });
+                    notification.onshow = function() { console.log("notification shown"); };
                 });
             }
         </script>
