--- a/tests/end2end/data/javascript/notifications.html
+++ b/tests/end2end/data/javascript/notifications.html
@@ -64,6 +64,15 @@
                 });
             }
 
+            function show_closing_notification() {
+                get_notification_permission(() => {
+                    let notification = new Notification("closing notification");
+                    notification.onclose = function() { console.log("notification closed"); };
+                    notification.onshow = function() { console.log("notification shown"); };
+                    setTimeout(() => notification.close(), 100);
+                });
+            }
+
             function show_image_notification(title, filename) {
                 get_notification_permission(() => {
                     let notification = new Notification(title, { icon: `img/${filename}` });
@@ -80,6 +89,7 @@
             <input type="button" onclick="show_notification()" value="Show notification" id="show-button">
             <input type="button" onclick="show_symbol_notification()" value="Show notification with symbols" id="show-symbols-button">
             <input type="button" onclick="show_replacing_notifications()" value="Show replacing notifications" id="show-replacing-button">
+            <input type="button" onclick="show_closing_notification()" value="Show and close notification" id="show-closing-button">
         </div>
         <div>
             <input type="button" onclick="show_image_notification('RGBA', 'rgba.png')" value="Show image notification" id="show-image-button">
