--- a/tests/end2end/data/javascript/notifications.html
+++ b/tests/end2end/data/javascript/notifications.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <style>
+            div {
+                padding: .5em;
+            }
+        </style>
         <script type="text/javascript">
             function permission_cb(permission) {
                 switch (permission) {
@@ -96,6 +101,14 @@
             <input type="button" onclick="show_image_notification('RGB', 'rgb.png')" value="Show image notification without alpha channel" id="show-image-button-noalpha">
             <input type="button" onclick="show_image_notification('Big', 'big.png')" value="Show a big image notification" id="show-image-button-big">
             <input type="button" onclick="show_image_notification('Padded', 'padded.png')" value="Show a padded image notification" id="show-image-button-padded">
+        </div>
+        <div>
+            More advanced test pages:
+            <ul>
+                <li><a href="https://tests.peter.sh/notification-generator/">Peter Beverloo</a></li>
+                <li><a href="https://www.bennish.net/web-notifications.html">Ben Kennish</a></li>
+                <li><a href="https://web-push-book.gauntface.com/demos/notification-examples/">Web Push Book</a></li>
+            </ul>
         </div>
     </body>
 </html>
