--- a/tests/end2end/data/click_element.html
+++ b/tests/end2end/data/click_element.html
@@ -6,7 +6,7 @@
         <span id='test' onclick='console.log("click_element clicked")'>Test Element</span>
         <span onclick='console.log("click_element special chars")'>"Don't", he shouted</span>
         <span>Duplicate</span>
-        <span>Duplicate</span>
+        <span class='clickable' onclick='console.log("click_element CSS selector")'>Duplicate</span>
         <form><input id='qute-input'></input></form>
         <a href="/data/hello.txt" id='link'>link</a>
         <span id='foo.bar' onclick='console.log("id with dot")'>ID with dot</span>
