--- a/tests/end2end/data/click_element.html
+++ b/tests/end2end/data/click_element.html
@@ -10,5 +10,7 @@
         <form><input id='qute-input'></input></form>
         <a href="/data/hello.txt" id='link'>link</a>
         <span id='foo.bar' onclick='console.log("id with dot")'>ID with dot</span>
+        <span style='position: absolute; left: 20px;top: 42px; width:10px; height:10px;'
+              onclick='console.log("click_element position")'></span>
     </body>
 </html>
