--- a/qutebrowser/html/version.html
+++ b/qutebrowser/html/version.html
@@ -10,6 +10,7 @@ function paste_version() {
 
 {% block style %}
 html { margin-left: 10px; }
+a { color: var(--color-link); }
 {% endblock %}
 
 {% block content %}
