Change background color for light color scheme
- Added a nuance of blue instead of white, as a background for light
  color scheme
- Deleted some unused CSS

--- a/qutebrowser/html/startpage.html
+++ b/qutebrowser/html/startpage.html
@@ -31,11 +31,6 @@ body {
     margin-bottom: 20px;
 }
 
-.title {
-    color: #c2e0ff;
-    font-size: 40px;
-}
-
 input {
     font-size: 23px;
     outline: none;
@@ -91,11 +86,7 @@ a:link, a:visited {
 
 @media (prefers-color-scheme: light) {
     body {
-        background-color: #ffffff;
-    }
-
-    .title {
-        color: #3cb0f3;
+        background-color: #f9fcff;
     }
 
     input {
