fix: Fix dark mode contrast according to review

--- a/qutebrowser/html/base.html
+++ b/qutebrowser/html/base.html
@@ -19,22 +19,24 @@ vim: ft=html fileencoding=utf-8 sts=4 sw=4 et:
             - label = color for text on some kind of label/button
             - fg-alt = alternative foreground color for subtle/parenthetical text
             - link = links
+            - timestamp = timestamps and dates (e.g. for qute://history)
             */
             @media (prefers-color-scheme: dark) {
                 :root {
-                    --color-bg: #070707;
-                    --color-fg: #eeeeee;
+                    --color-bg: #1e1c1c;
+                    --color-fg: #dad8d8;
                     --color-bg-alt: #1e282f;
                     --color-fg-feature: #000444;
-                    --color-bg-feature: #1887c5;
+                    --color-bg-feature: #84b4e6;
                     --color-fg-feature-alt: #a6dfff;
                     --color-border: #01cdd0;
                     --color-border-focused: #7a589ea6;
-                    --color-bg-label: #333333;
-                    --color-fg-label: #999999;
-                    --color-fg-alt: #a7a1a1cf;
-                    --color-fg-heading: #084c88;
-                    --color-link: #2562dc;
+                    --color-bg-label: #565656;
+                    --color-fg-label: #dddddd;
+                    --color-fg-alt: #cbc6c6cf;
+                    --color-fg-heading: #a6dfff;
+                    --color-link: #84b4e6;
+                    --color-timestamp: #84b4e6;
                 }
             }
             @media (prefers-color-scheme: light) {
@@ -52,6 +54,7 @@ vim: ft=html fileencoding=utf-8 sts=4 sw=4 et:
                     --color-fg-alt: #635d5dcf;
                     --color-fg-heading: #000444;
                     --color-link: #2562dc;
+                    --color-timestamp: #555;
                 }
             }
 
