--- a/qutebrowser/html/history.html
+++ b/qutebrowser/html/history.html
@@ -11,7 +11,7 @@ td.title {
 }
 
 td.time {
-    color: #555;
+    color: var(--color-timestamp);
     text-align: right;
     white-space: nowrap;
 }
@@ -21,7 +21,7 @@ table {
 }
 
 .date {
-    color: #555;
+    color: var(--color-timestamp);
     font-size: 12pt;
     padding-bottom: 15px;
     font-weight: bold;
