--- a/qutebrowser/html/no_pdfjs.html
+++ b/qutebrowser/html/no_pdfjs.html
@@ -110,7 +110,7 @@ li {
           </li>
 
           <li>
-            You can manually download the pdf.js archive
+            You can manually download the legacy pdf.js archive
             <a href="https://mozilla.github.io/pdf.js/getting_started/#download">here</a>
             and extract it to <code>{{ pdfjs_dir }}</code>
             <br>
