Add a test for keyboard focus after cross-origin navigation
Fails without the fix on main on QtWebEngine 6.4 (works on 6.2).
Works fine after the fix.

See #7820

--- a/tests/end2end/data/insert_mode_settings/html/autofocus.html
+++ b/tests/end2end/data/insert_mode_settings/html/autofocus.html
@@ -7,6 +7,9 @@
           function setup_event_listener() {
               var elem = document.getElementById('qute-input-autofocus');
               console.log(elem);
+              elem.addEventListener('focus', function() {
+                  console.log("focused");
+              });
               elem.addEventListener('input', function() {
                   console.log("contents: " + elem.value);
               });
