Add some debug log messages to JS test snippets
Some of these tests are flaky. I want to confirm wither the JS in the
tests is running at all.

ref: https://github.com/qutebrowser/qutebrowser/issues/5390#issuecomment-1812008035

--- a/tests/end2end/data/fileselect.html
+++ b/tests/end2end/data/fileselect.html
@@ -5,6 +5,7 @@
         <title>Testing fileselection</title>
         <script type="text/javascript">
             function onLoad() {
+                console.log('setting up event handlers')
                 for (let id of ['#single_file', '#multiple_files', '#folder']) {
                     const input = document.querySelector(id);
                     input.addEventListener('change', function (e) {
